--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,1 +1,6 @@
-$main-color: red;
+$main-color: rgb(210, 215, 217);
+$header-size: 24px;
+$max-content-width: 1100px;
+$margin:auto;
+$position: absolute;
+$font-family: “Inter”;
