--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,14 @@
 @import "./variables.scss";
-@import'./components/header.scss';
-@import'./components/footer.scss';
+@import "./components/header.scss";
+@import "./components/footer.scss";
+@import "./components/main.scss";
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 0;
+}
 
 body {
   background-color: $main-color;
